<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_film">

    <fragment
        android:id="@+id/navigation_film"
        android:name="com.zakariawahyu.submissionexpert.fragment.FilmFragment"
        android:label="@string/film"
        tools:layout="@layout/fragment_film" />

    <fragment
        android:id="@+id/navigation_tvshow"
        android:name="com.zakariawahyu.submissionexpert.fragment.TvShowFragment"
        android:label="@string/tvshows"
        tools:layout="@layout/fragment_tv_show" />

    <fragment
        android:id="@+id/navigation_favorit"
        android:name="com.zakariawahyu.submissionexpert.fragment.FavoriteFragment"
        android:label="@string/fav"
        tools:layout="@layout/fragment_favorite" />

</navigation>