<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingLanguage">

    <TextView
        android:id="@+id/tvPilihBahasa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/pilihbahasa"/>


    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvPilihBahasa"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPilihBahasa">

        <RadioButton
            android:id="@+id/radioButtonId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/indonesia" />

        <RadioButton
            android:id="@+id/radioButtonEng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english" />

    </RadioGroup>

    <Button
        android:onClick="simpanBahasa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radiogroup"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:text="@string/simpanbahasa"/>


</RelativeLayout>